terraform/internet gate.tf
resource "aws_internet_gateway" "igw" {
vpc_id = aws_vpc.myvpc.id

tags = {
Name = "igw"
}
}
